@@ -237,6 +237,8 @@ where XXXXXX is the bug number as listed below.
 348748  Fix redundant condition
 348890  Fix clang warning about unsupported --param inline-unit-growth=900
 348949  Bogus "ERROR: --ignore-ranges: suspiciously large range"
+349086  Fix UNKNOWN task message [id 3406, to mach_task_self(), 
+        reply 0x........] (task_set_info)
 n-i-bz  Provide implementations of certain compiler builtins to support
         compilers who may not provide those
 n-i-bz  Old STABS code is still being compiled, but never used. Remove it.
